# Caustix

./: .gitignore  .gitmodules  CMakeLists.txt  Caustix.sln  README.md  main.cpp  premake5.lua  vcpkg.json
Caustix/: Caustix.vcxproj  Caustix.vcxproj.filters
Caustix/src/: Caustix.h  cxpch.cpp  cxpch.h
Caustix/src/Caustix/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.h
Caustix/src/Caustix/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Caustix/src/Caustix/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Caustix/src/Caustix/Platform/: WindowsWindow.cpp
Caustix/src/Platform/Vulkan/: Device.cpp  Device.h  Shared.cpp  Shared.h
Caustix/src/Platform/Windows/: WindowsWindow.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: Sandbox.cpp
Source/Caustix/Application/: Application.ixx  GameApplication.ixx  GameCamera.ixx  Input.ixx
Source/Caustix/Application/Graphics/: CommandBuffer.cxx  CommandBuffer.ixx  GPUDevice.ixx  GPUProfiler.ixx  GPUResources.ixx  ImGuiService.ixx  Renderer.ixx
Source/Caustix/Foundation/: Blob.ixx  Camera.ixx  Color.ixx  DataStructures.ixx  File.ixx  Process.ixx  ResourceManager.ixx  glTF.ixx
Source/Caustix/Foundation/Memory/Allocators/: Allocator.ixx  StackAllocator.ixx
Source/Caustix/Foundation/Services/: Service.ixx  ServiceManager.ixx
Source/Caustix/foundation/: ResourceManager.ixx
Source/DemoApplication/: CMakeLists.txt  DemoApplication.ixx  main.cpp
premakeForLibs/: imgui.lua
source/caustix/application/: Input.ixx  Keys.ixx  Window.ixx  game_application.cpp  game_camera.cpp  input.cpp  window.cpp
source/caustix/application/Graphics/: CommandBuffer.ixx  GPUDefines.ixx  GPUDevice.cxx  GPUDevice.ixx  GPUResources.ixx
source/caustix/foundation/: Assert.ixx  Color.ixx  DataStructures.ixx  File.ixx  Log.ixx  Numerics.ixx  Platform.ixx  array.ixx  bit.ixx  blob_serialization.hpp  camera.cpp  camera.hpp  data_structures.hpp  file.cpp  glTF.ixx  gltf.cpp  hash_map.hpp  hash_map.ixx  memory.cpp  memory.ixx  numerics.cpp  platform.hpp  process.cpp  process.ixx  relative_data_structures.hpp  resource_manager.hpp  service.ixx  service_manager.cpp  string.cpp
source/caustix/foundation/Memory/: MemoryDefines.ixx
source/caustix/foundation/Memory/Allocators/: HeapAllocator.ixx  LinearAllocator.ixx
source/caustix/foundation/Services/: MemoryService.ixx  ServiceManager.ixx
source/chapter1/: CMakeLists.txt  main.cpp
source/chapter1/graphics/: caustix_imgui.cpp  gpu_device.cpp  gpu_device.hpp  gpu_profiler.cpp  gpu_resources.hpp  renderer.cpp
source/test/: CMakeLists.txt  main.cpp
